UniqueTurnover MDV auf DTOs umgestellt